After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748514 - Miscellaneous compiler warning fixes
Miscellaneous compiler warning fixes
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other All
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2015-04-27 10:12 UTC by Philip Withnall
Modified: 2015-04-27 15:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libsoup: Fix variable shadowing (3.10 KB, patch)
2015-04-27 10:12 UTC, Philip Withnall
committed Details | Review
libsoup: Remove duplicate function declarations (2.04 KB, patch)
2015-04-27 10:12 UTC, Philip Withnall
committed Details | Review
libsoup: Fix some old-style function declarations (1.27 KB, patch)
2015-04-27 10:12 UTC, Philip Withnall
committed Details | Review
libsoup: Fix a variable name in the documentation (2.44 KB, patch)
2015-04-27 10:12 UTC, Philip Withnall
committed Details | Review
tests: Set default values for some variables (1.67 KB, patch)
2015-04-27 10:12 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2015-04-27 10:12:06 UTC
A few trivial patches.
Comment 1 Philip Withnall 2015-04-27 10:12:09 UTC
Created attachment 302426 [details] [review]
libsoup: Fix variable shadowing

This makes the code a little easier to read, and eliminates some
compiler warnings.
Comment 2 Philip Withnall 2015-04-27 10:12:13 UTC
Created attachment 302427 [details] [review]
libsoup: Remove duplicate function declarations

The *_default_init() function is declared by G_DEFINE_INTERFACE, so
doesn’t have to be declared separately. This eliminates some compiler
warnings.
Comment 3 Philip Withnall 2015-04-27 10:12:17 UTC
Created attachment 302428 [details] [review]
libsoup: Fix some old-style function declarations

Eliminate some compiler warnings.
Comment 4 Philip Withnall 2015-04-27 10:12:21 UTC
Created attachment 302429 [details] [review]
libsoup: Fix a variable name in the documentation

Change the documentation and header file to match the function
definition; this fixes a gtk-doc warning, but introduces no functional
or API changes.
Comment 5 Philip Withnall 2015-04-27 10:12:26 UTC
Created attachment 302430 [details] [review]
tests: Set default values for some variables

This eliminates a compiler warning about potentially using uninitialised
variables. It’s not actually possible for this happen (the variables are
only used on conditional paths with the same conditions as those where
they were previously set), but it’s easy enough to make this change to
shut the compiler up.
Comment 6 Philip Withnall 2015-04-27 15:24:04 UTC
Attachment 302426 [details] pushed as af2f349 - libsoup: Fix variable shadowing
Attachment 302427 [details] pushed as 3913732 - libsoup: Remove duplicate function declarations
Attachment 302428 [details] pushed as 28d4943 - libsoup: Fix some old-style function declarations
Attachment 302429 [details] pushed as 62e2143 - libsoup: Fix a variable name in the documentation
Attachment 302430 [details] pushed as e4bf420 - tests: Set default values for some variables