libsoup: Fix variable shadowing

This makes the code a little easier to read, and eliminates some
compiler warnings.

https://bugzilla.gnome.org/show_bug.cgi?id=748514