libsoup/soup-converter-wrapper.c
@@ -247,8 +247,8 @@ soup_converter_wrapper_real_convert (GConverter *converter,
 				      &my_error);
 	if (result != G_CONVERTER_ERROR) {
 		if (!priv->started) {
-			SoupMessageFlags flags = soup_message_get_flags (priv->msg);
-			soup_message_set_flags (priv->msg, flags | SOUP_MESSAGE_CONTENT_DECODED);
+			SoupMessageFlags message_flags = soup_message_get_flags (priv->msg);
+			soup_message_set_flags (priv->msg, message_flags | SOUP_MESSAGE_CONTENT_DECODED);
 			priv->started = TRUE;
 		}
 
